# pytauri

./: .gitattributes  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md  foo copy 2.py  foo copy 3.py  foo copy.py  foo.py  gen_ts.py  gen_ts.ts  mkdocs.yml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  pyproject.toml  release.py  tsconfig.base.json  versions.json
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/actions/setup-envs-ver/: action.yml
.github/workflows/: clear-cache.yml  docs.yml  lint-test.yml  preview-publish.yml  publish-js.yml  publish-py.yml  publish-rs.yml
0.1/: 404.html  index.html  objects.inv  sitemap.xml
0.1/CHANGELOG/CHANGELOG/: index.html
0.1/CONTRIBUTING/CONTRIBUTING/: index.html
0.1/reference/SUMMARY/: index.html
0.1/reference/codelldb/: index.html
0.1/reference/pyo3_utils/: index.html
0.1/reference/pytauri/: index.html
0.1/search/: search_index.json
0.2/: 404.html  index.html  sitemap.xml
0.2/CHANGELOG/: index.html
0.2/CONTRIBUTING/: index.html
0.2/search/: search_index.json
0.3/: 404.html  index.html  objects.inv  sitemap.xml
0.3/CHANGELOG/: index.html
0.3/CONTRIBUTING/: index.html
0.4/: 404.html  index.html  sitemap.xml
0.4/CHANGELOG/: index.html
0.4/CONTRIBUTING/: index.html
0.5/: 404.html  index.html  sitemap.xml
0.5/CHANGELOG/: index.html
0.5/CONTRIBUTING/: index.html
0.6/: 404.html  index.html  sitemap.xml
0.6/CHANGELOG/: index.html
0.6/CONTRIBUTING/: index.html
0.6/search/: search_index.json
0.6/stylesheets/: extra.css
0.7/: 404.html  index.html  sitemap.xml
0.7/CHANGELOG/: index.html
0.7/CONTRIBUTING/: index.html
0.7/search/: search_index.json
0.8/: 404.html  index.html  objects.inv  sitemap.xml
0.8/CHANGELOG/: index.html
0.8/CONTRIBUTING/: index.html
0.8/search/: search_index.json
0.8/stylesheets/: extra.css
crates/pyfuture/: Cargo.toml
crates/pyfuture/src/: lib copy 2.rs  lib copy 3.rs  lib copy.rs  lib.rs
crates/pyfuture/src/future/: rust.rs
crates/pyo3-utils/: CHANGELOG.md  Cargo.toml
crates/pyo3-utils/src/: from_py_dict.rs  lib.rs  serde.rs
crates/pytauri/: CHANGELOG.md  Cargo.toml
crates/pytauri-bundler/: Cargo.toml  build.rs
crates/pytauri-bundler/src/: lib.rs  main.rs
crates/pytauri-core/: CHANGELOG.md  Cargo.toml
crates/pytauri-core/src/: lib.rs  utils.rs
crates/pytauri-core/src/ext_mod_impl/: ipc.rs  menu.rs  mod.rs  path.rs  plugin.rs  tray.rs  webview.rs  window.rs
crates/pytauri-core/src/ext_mod_impl/lib/: app.rs  app_handle.rs  assets.rs  context.rs  emitter.rs  event.rs  listener.rs  manager.rs  mod.rs  rect.rs  run_event.rs  runtime.rs  theme.rs  url.rs
crates/pytauri-core/src/plugins/: mod.rs
crates/pytauri-core/src/plugins/autostart/: mod.rs
crates/pytauri-core/src/plugins/clipboard_manager/: mod.rs
crates/pytauri-core/src/plugins/deep_link/: mod.rs
crates/pytauri-core/src/plugins/dialog/: mod.rs
crates/pytauri-core/src/plugins/fs/: mod.rs
crates/pytauri-core/src/plugins/global_shortcut/: mod.rs
crates/pytauri-core/src/plugins/http/: mod.rs
crates/pytauri-core/src/plugins/notification/: mod.rs
crates/pytauri-core/src/plugins/opener/: mod.rs
crates/pytauri-core/src/plugins/os/: mod.rs
crates/pytauri-core/src/plugins/persisted_scope/: mod.rs
crates/pytauri-core/src/plugins/positioner/: mod.rs
crates/pytauri-core/src/plugins/process/: mod.rs
crates/pytauri-core/src/plugins/shell/: mod.rs
crates/pytauri-core/src/plugins/single_instance/: mod.rs
crates/pytauri-core/src/plugins/updater/: mod.rs
crates/pytauri-core/src/plugins/upload/: mod.rs
crates/pytauri-core/src/plugins/websocket/: mod.rs
crates/pytauri-core/src/plugins/window_state/: mod.rs
crates/pytauri-plugin-dialog/: CHANGELOG.md  Cargo.toml
crates/pytauri-plugin-notification/: CHANGELOG.md  Cargo.toml
crates/pytauri/src/: _append_ext_mod.py  _freeze.py  lib.rs  pyembed.rs  standalone.rs
crates/pytauri/src/standalone/: mod.rs  pyembed.rs
crates/tauri-plugin-pytauri/: CHANGELOG.md  Cargo.toml
dev/: 404.html  index.html  objects.inv  sitemap.xml
dev/CHANGELOG/: index.html
dev/CONTRIBUTING/: index.html
dev/search/: search_index.json
docs/reference/: rs.md
docs/stylesheets/: extra.css
docs/usage/: using-unreleased-commits.md
docs_src/tutorial/: cammand.ts  gen_ts.py  invoke_handler.py  plugin.py
example/: Cargo.toml  Tauri.linux.toml  Tauri.macos.standalone.toml  Tauri.macos.toml  Tauri.toml  Tauri.windows.standalone.toml  Tauri.windows.toml  build.rs
example/src/: main.rs
examples/nicegui-app/: Cargo.toml  README.md  pyproject.toml  tauri.conf.json
examples/tauri-app/: README.md  package.json
examples/tauri-app-wheel/: README.md  package.json  tsconfig.json  vite.config.ts
examples/tauri-app-wheel/python/: .gitignore  pyproject.toml
examples/tauri-app-wheel/python/src/tauri_app_wheel/: Tauri.toml  __init__.py  __main__.py
examples/tauri-app-wheel/python/src/tauri_app_wheel/capabilities/: default.toml
examples/tauri-app/src-tauri/: Cargo.toml  pyproject.toml  setup.py  tauri.conf.json
examples/tauri-app/src-tauri/capabilities/: default.json
examples/tauri-app/src-tauri/python/tauri_app/: __init__.py  __main__.py  private.py
examples/tauri-app/src-tauri/src/: lib.rs  main.rs
python/codelldb/: CHANGELOG.md  pyproject.toml
python/codelldb/src/codelldb/: __init__.py
python/pyfuture/: pyproject.toml
python/pyo3-utils/: CHANGELOG.md  pyproject.toml
python/pytauri/: CHANGELOG.md  pyproject.toml
python/pytauri-plugin-notification/: CHANGELOG.md  pyproject.toml
python/pytauri-wheel/: CHANGELOG.md  Cargo.toml  Tauri.toml  pyproject.toml  setup.py
python/pytauri-wheel/icons/: README.md
python/pytauri-wheel/python/pytauri_wheel/: __init__.py  lib.py
python/pytauri-wheel/src/: lib.rs
scripts/: python-verifytypes.sh
tests/pytauri-test/: Cargo.toml  pyproject.toml  tauri.conf.json
tests/pytauri-test/python/pytauri_test/: __init__.py
tests/pytauri-test/tests/: ipc.rs
utils/: gen_ref_pages.py
(+639 files in other folders)
