[workspace]
members = ["crates/*", "example"]
resolver = "2"


[workspace.package]
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
rust-version = "1.81"


[workspace.dependencies]
pyo3 = { version = "0.23" }
pyo3-build-config = { version = "0.23" }

tauri = { version = "2", features = ["wry"] }
tauri-utils = { version = "2" }
tauri-build = { version = "2" }
tauri-plugin = { version = "2", features = ["build"] }

tauri-plugin-notification = { version = "2" }

serde = { version = "1", features = ["derive"] }
serde_json = { version = "1" }
parking_lot = { version = "0.12" }
libc = { version = "0.2" }

tauri-plugin-pytauri = { path = "crates/tauri-plugin-pytauri" }
pytauri-core = { path = "crates/pytauri-core" }
pytauri = { path = "crates/pytauri" }
pytauri-plugin-notification = { path = "crates/pytauri-plugin-notification" }
pyo3-utils = { path = "crates/pyo3-utils" }

tokio = { version = "1", default-features = false }
reqwest = { version = "0.12", features = ["json"] }
flate2 = "1.0"
tar = "0.4"
dirs = "5"

[profile.release]
lto = "thin"
