[workspace]
members = [
    "crates/*",
    "examples/tauri-app/src-tauri",
    "examples/nicegui-app",
    "tests/pytauri-test",
    "python/pytauri-wheel",
]
resolver = "2"


[workspace.package]
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
rust-version = "1.82"
repository = "https://github.com/pytauri/pytauri/"
homepage = "https://github.com/pytauri/pytauri/"
authors = ["Sean Wang <126865849+WSH032@users.noreply.github.com>"]


[workspace.dependencies]
pyo3 = { version = "0.25" }
pyo3-build-config = { version = "0.25" }
pythonize = { version = "0.25" }

tauri = { version = "2.8" }
tauri-build = { version = "2.4" }
tauri-plugin = { version = "2.4" }

tauri-plugin-opener = { version = "2.5" }
tauri-plugin-clipboard-manager = { version = "2.3" }
tauri-plugin-dialog = { version = "2.3" }
tauri-plugin-fs = { version = "2.4" }
tauri-plugin-notification = { version = "2.3" }
tauri-plugin-autostart = { version = "2.5" }
tauri-plugin-deep-link = { version = "2.4" }
tauri-plugin-upload = { version = "2.3" }
tauri-plugin-websocket = { version = "2.4" }
tauri-plugin-http = { version = "2.5" }
tauri-plugin-os = { version = "2.3" }
tauri-plugin-persisted-scope = { version = "2.3" }
tauri-plugin-positioner = { version = "2.3" }
tauri-plugin-process = { version = "2.3" }
tauri-plugin-shell = { version = "2.3" }
tauri-plugin-single-instance = { version = "2.3" }
tauri-plugin-updater = { version = "2.9" }
tauri-plugin-window-state = { version = "2.4" }
tauri-plugin-global-shortcut = { version = "2.3" }

serde = { version = "1" }
serde_json = { version = "1" }

parking_lot = { version = "0.12" }
libc = { version = "0.2" }
dunce = { version = "1", default-features = false }

tokio = { version = "1", default-features = false }

# ❗ when bumping, remember to update workspace dependencies
tauri-plugin-pytauri = { path = "crates/tauri-plugin-pytauri", version = "0.7" }
pytauri-core = { path = "crates/pytauri-core", version = "0.7" }
pytauri = { path = "crates/pytauri", version = "0.7" }
pyo3-utils = { path = "crates/pyo3-utils", version = "0.3" }

[patch.crates-io]
# 👇 for `pytauri-wheel` workspace dependencies.
#
# # Why don't we use `path` directly in `pytauri-wheel/Cargo.toml`:
#
# This is because when building `wheel` from `sdist`, Cargo will follow these `path`,
# but these workspace dependencies are not packaged in `sdist`.
# By patching outside the `pytauri-wheel` crate, we ensure that `path` is only effective during development.
pytauri = { path = "crates/pytauri" }
pytauri-core = { path = "crates/pytauri-core" }
tauri-plugin-pytauri = { path = "crates/tauri-plugin-pytauri" }
pyo3-utils = { path = "crates/pyo3-utils" }
# 👆


[profile.release]
lto = "thin"

# for standalone app bundle python example
[profile.bundle-dev]
inherits = "dev"

[profile.bundle-release]
inherits = "release"
