[package]
name = "pytauri-demo"
version = { workspace = true }
edition = { workspace = true }
rust-version = { workspace = true }

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "_ext_mod"
# `cdylib` for python extension module,
# `lib` for rust testing
crate-type = ["cdylib", "lib", "staticlib"]

[dependencies]
# DO NOT enble `extension-module` feature, instead enable it in `pyproject.toml`
# see: <https://pyo3.rs/v0.22.2/building-and-distribution.html?highlight=extension-module#the-extension-module-feature>
pyo3 = { workspace = true }

tauri = { workspace = true, features = ["devtools", "config-toml"] }
pytauri = { workspace = true, features = ["standalone"] }
tauri-plugin-pytauri = { workspace = true }

tauri-plugin-shell = "2"

tauri-plugin-notification = { workspace = true }
pytauri-plugin-notification = { workspace = true }

serde = { workspace = true }
serde_json = { workspace = true }

rustpython = { version = "0.4.0", default-features = false, features = ["freeze-stdlib"] }
rustpython-vm = { version = "0.4.0", default-features = false, features = ["freeze-stdlib"] }
rustpython-pylib = { version = "0.4.0", default-features = false, features = ["freeze-stdlib"] }

[build-dependencies]
uv-python = { git = "https://github.com/astral-sh/uv", rev = "0805242" }
uv-settings = { git = "https://github.com/astral-sh/uv", rev = "0805242" }
uv-cache = { git = "https://github.com/astral-sh/uv", rev = "0805242" }
uv-installer  = { git = "https://github.com/astral-sh/uv", rev = "0805242" }
hashbrown = { version = "0.15" }

tauri-build = { workspace = true }
directories = "5.0.1"
