[package]
name = "pyfuture"
version = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
rust-version = { workspace = true }


[dependencies]
pyo3 = { workspace = true }
bon = { workspace = true }

[dependencies.tokio]
workspace = true
default-features = false
features = ["sync", "macros", "rt", "rt-multi-thread"]

[dependencies.tokio-util]
workspace = true
default-features = false
features = ["rt"]


[dependencies.crossbeam]
version = "0.8"


[dev-dependencies]
console-subscriber = "0.4"
anyhow = "1"

[dev-dependencies.tokio]
workspace = true
default-features = false
features = ["time", "full", "tracing"]
