[package]
name = "pyfuture"
version = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
rust-version = { workspace = true }


[dependencies]
pyo3 = { workspace = true }
bon = { workspace = true }

[dependencies.tokio]
workspace = true
default-features = false
features = ["sync", "macros", "rt", "rt-multi-thread"]

[dependencies.tokio-util]
workspace = true
default-features = false
features = ["rt"]


[dependencies.crossbeam]
version = "0.8"

[dependencies.futures]
version = "0.3"

[dependencies.async-stream]
version = "0.3"


[dev-dependencies]
console-subscriber = "0.4"
anyhow = "1"
pytauri = { workspace = true, features = ["standalone"] }

[dev-dependencies.tokio]
workspace = true
default-features = false
features = ["time", "full", "tracing"]
