[package]
name = "pyo3-utils"
version = "0.3.0"
edition = { workspace = true }
license = { workspace = true }
rust-version = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
authors = { workspace = true }
description = "Utilities for PyO3"


[package.metadata.docs.rs]
# See: https://docs.rs/about/metadata
all-features = true
rustc-args = ["--cfg", "docsrs"]
rustdoc-args = ["--cfg", "docsrs"]


[dependencies]
pyo3 = { workspace = true }

parking_lot = { workspace = true }

serde = { workspace = true, features = ["derive"], optional = true }
serde_json = { workspace = true, optional = true }
pythonize = { workspace = true, optional = true }


[features]
unstable = ["unstable-from-py-dict", "unstable-serde"]

unstable-from-py-dict = []
unstable-serde = ["dep:serde", "dep:serde_json", "dep:pythonize"]
