[package]
name = "pytauri-bundler"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
tokio = { workspace = true, features = ["full"] }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
flate2 = { workspace = true }
tar = { workspace = true }
anyhow = { workspace = true }
