[package]
name = "pytauri-core"
version = "0.7.0"
edition = { workspace = true }
license = { workspace = true }
rust-version = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
authors = { workspace = true }
description = "Core library for PyTauri"


[package.metadata.docs.rs]
# See: https://docs.rs/about/metadata
all-features = true
# NOTE: `--cfg docsrs` is necessary,
# otherwise some tauri dependencies will require linking to system libraries
# that are not available in the `docs.rs` environment.
rustc-args = ["--cfg", "docsrs"]
rustdoc-args = ["--cfg", "docsrs"]


[dependencies]
tauri = { workspace = true, features = ["wry", "tray-icon"] }
# tauri plugins
tauri-plugin-notification = { workspace = true, optional = true }
tauri-plugin-dialog = { workspace = true, optional = true }
tauri-plugin-clipboard-manager = { workspace = true, optional = true }
tauri-plugin-fs = { workspace = true, optional = true }
tauri-plugin-opener = { workspace = true, optional = true }
tauri-plugin-autostart = { workspace = true, optional = true }
tauri-plugin-deep-link = { workspace = true, optional = true }
tauri-plugin-http = { workspace = true, optional = true }

pyo3 = { workspace = true }

# workspace dependencies
pyo3-utils = { workspace = true, features = ["unstable"] }


[features]
__private = []
__test = ["tauri/test"]
__no_test = []          # for allowing use `--all-features` without running tests

plugin-notification = ["dep:tauri-plugin-notification"]
plugin-dialog = [
    "dep:tauri-plugin-dialog",
    # `plugin-fs` just for `PluginError`
    "plugin-fs",
]
plugin-clipboard-manager = ["dep:tauri-plugin-clipboard-manager"]
plugin-fs = ["dep:tauri-plugin-fs"]
plugin-opener = ["dep:tauri-plugin-opener"]
plugin-autostart = ["dep:tauri-plugin-autostart"]
plugin-deep-link = ["dep:tauri-plugin-deep-link"]
plugin-http = [
    "dep:tauri-plugin-http",
    # `plugin-fs` just for `PluginError`
    "plugin-fs",
]
