[package]
name = "pytauri"
version = "0.7.0"
edition = { workspace = true }
license = { workspace = true }
rust-version = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
authors = { workspace = true }
description = "Tauri binding for Python through Pyo3"


[package.metadata.docs.rs]
# See: https://docs.rs/about/metadata
all-features = true
# NOTE: `--cfg docsrs` is necessary,
# otherwise some tauri dependencies will require linking to system libraries
# that are not available in the `docs.rs` environment.
rustc-args = ["--cfg", "docsrs"]
rustdoc-args = ["--cfg", "docsrs"]


[features]
standalone = ["dep:libc", "dep:dunce"]

plugin-notification = ["pytauri-core/plugin-notification"]
plugin-dialog = ["pytauri-core/plugin-dialog"]
plugin-clipboard-manager = ["pytauri-core/plugin-clipboard-manager"]
plugin-fs = ["pytauri-core/plugin-fs"]
plugin-opener = ["pytauri-core/plugin-opener"]
plugin-autostart = ["pytauri-core/plugin-autostart"]
plugin-deep-link = ["pytauri-core/plugin-deep-link"]
plugin-http = ["pytauri-core/plugin-http"]
plugin-os = ["pytauri-core/plugin-os"]
plugin-persisted-scope = ["pytauri-core/plugin-persisted-scope"]
plugin-positioner = ["pytauri-core/plugin-positioner"]
plugin-process = ["pytauri-core/plugin-process"]
plugin-shell = ["pytauri-core/plugin-shell"]
plugin-single-instance = ["pytauri-core/plugin-single-instance"]
plugin-updater = ["pytauri-core/plugin-updater"]
plugin-upload = ["pytauri-core/plugin-upload"]
plugin-websocket = ["pytauri-core/plugin-websocket"]
plugin-window-state = ["pytauri-core/plugin-window-state"]


[dependencies]
tauri = { workspace = true }
tauri-plugin-pytauri = { workspace = true }

pyo3 = { workspace = true }

libc = { workspace = true, optional = true }
dunce = { workspace = true, optional = true }

# workspace dependencies
pytauri-core = { workspace = true, features = ["__private"] }
pyo3-utils = { workspace = true, features = ["unstable"] }
