[package]
name = "tauri-app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "tauri_app_lib"
# `cdylib` is required for building python extension modules files
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
# the same as the package name
name = "tauri-app"
path = "src/main.rs"
required-features = ["pytauri/standalone"]


[build-dependencies]
tauri-build = { workspace = true }

[dependencies]
tauri = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }

pyo3 = { workspace = true }
pytauri = { workspace = true, features = [
    "plugin-notification",
    "plugin-dialog",
    "plugin-clipboard-manager",
    "plugin-fs",
    "plugin-opener",
    "plugin-autostart",
    "plugin-deep-link",
    "plugin-http",
    "plugin-os",
] }
tauri-plugin-pytauri = { workspace = true }
tauri-plugin-notification = { workspace = true }
tauri-plugin-dialog = { workspace = true }
tauri-plugin-clipboard-manager = { workspace = true }
tauri-plugin-fs = { workspace = true, features = ["watch"] }
tauri-plugin-opener = { workspace = true }
tauri-plugin-autostart = { workspace = true }
tauri-plugin-deep-link = { workspace = true }
tauri-plugin-http = { workspace = true }
tauri-plugin-os = { workspace = true }
