[project]
name = "tauri-app"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.9"
dependencies = ["pytauri == 0.1.*", "pydantic == 2.*", "anyio == 4.*"]

[dependency-groups]
dev = ["debugpy == 1.*", "codelldb"]

[project.entry-points.pytauri]
# - "tauri_app" -> `python/tauri_app/`
# - "ext_mod" -> `#[pyo3(name = "ext_mod")]` in rust
ext_mod = "tauri_app.ext_mod"

[build-system]
requires = [
    "setuptools == 80.*",
    "setuptools-rust == 1.*",
    "setuptools_scm == 9.*",
    "Cython == 3.*",
]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages]
find = { where = ["python"] }

# see: <https://www.maturin.rs/config>
[tool.maturin]
# the same as [tool.setuptools.packages.find.where]
python-source = "python"
# the same as `[project.entry-points.pytauri.ext_mod]`,
# i.e., `target` in `setup.py`
module-name = "tauri_app.ext_mod"
# see `setup.py`
features = ["pyo3/extension-module", "tauri/custom-protocol", "pyo3/abi3-py39"]
# equivalent to `setuptools_scm`
sdist-generator = "git"
# equivalent to `MANIFEST.in`
include = [{ path = "frontend/**/*", format = "sdist" }]


[tool.uv.sources]
pytauri = { workspace = true }
codelldb = { workspace = true }
